syntax = "proto3";

package greeter;

message HelloRequest {
  string name = 1;
}

message GoodbyeRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message GoodbyeReply {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply) {}
}
